# dunno

./: .gitignore  Justfile  README.md
invoker/: .gitignore  go.mod  go.sum  main.go
jvm-spring-lambda/: .gitignore  Justfile  build.gradle  gradle.properties  settings.gradle
jvm-spring-lambda/infra/: apigw.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  variables.tf
lambda/: Justfile
lambda/dotnet/: Function.cs  dunno.csproj
lambda/golang/: go.mod  main.go
lambda/java/: build.gradle  settings.gradle
lambda/js/: main.js
lambda/odpalator/: .gitignore  Justfile  go.mod  go.sum  main.go
lambda/python/: main.py
lambda/quarkus/: settings.gradle
lambda/ruby/: main.rb
lambda/rust/: Cargo.toml
managed-instances/: Justfile
managed-instances/infra/: capacity_provider.tf  dev.tfvars  main.tf  outputs.tf  variables.tf  vpc.tf
managed-instances/kotlin-connection-pool/: .gitignore  settings.gradle
parallel-invocation/: .gitignore  Justfile  package-lock.json  package.json  tsconfig.json
parallel-invocation/infra/: lambda.tf
parallel-invocation/invoker/: go.mod  go.sum  main.go
parallel-invocation/src/: index.ts
patterns/go-layers/: .gitignore  Justfile  go.work
patterns/mux/: Justfile  go.mod  go.sum
patterns/node-esbuild/: .gitignore  Justfile  build.lambda.mjs  package-lock.json  package.json
patterns/node-layers/: .gitignore  Justfile  package-lock.json  package.json  (+1 more)
patterns/routers/python-powertools/: .gitignore  main.py  pyproject.toml
provisioned_concurrency_scaling/: .gitignore  Justfile  go.mod  go.sum  main.go
(+153 files in other folders)
